[package]
name = "ourios-ingester"
version.workspace = true
description = "Ourios ingester role — OTLP receiver (RFC 0003), WAL-before-ack (RFC 0008), and the background compaction runner (RFC 0009)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ourios_ingester"
path = "src/lib.rs"

# Crash-recovery test fixture spawned (and SIGKILL'd) by
# tests/rfc0003_2_crash_before_ack.rs — mirrors ourios-wal's
# wal_crash_fixture (PR #126). Not a product binary; a real process kill
# is the only faithful exercise of the crash-before-ack path.
[[bin]]
name = "receiver_crash_fixture"
path = "tests/fixtures/receiver_crash_fixture.rs"
test = false
bench = false
doctest = false

# Crash-with-a-non-empty-buffer fixture spawned (and SIGKILL'd) by
# tests/rfc0014_5_crash_no_loss.rs — mirrors receiver_crash_fixture but wires
# the miner to a ParquetRecordSink, so the acked-but-un-flushed records sit in
# the volatile buffer at crash time and recovery must rebuild them from the WAL
# (RFC0014.5 / CLAUDE.md §3.4).
[[bin]]
name = "receiver_sink_crash_fixture"
path = "tests/fixtures/receiver_sink_crash_fixture.rs"
test = false
bench = false
doctest = false

[dependencies]
# Miner tunables (RFC 0004), their own crate so config edits recompile narrowly (RFC 0028).
ourios-config = { path = "../ourios-config" }
# Shared types (TenantId, config) for the ingest path.
ourios-core = { path = "../ourios-core" }
# RFC 0030 TLS seam: rustls builds each listener's ServerConfig (already
# in the workspace tree via reqwest; the provider is pinned to ring in
# code, so only that provider feature is enabled here), and pki-types'
# `pem` feature reads the cert/key/CA files.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = { version = "1", default-features = false, features = ["std"] }
# The ingest pipeline's WAL-before-ack durability (RFC 0003 §6.5 /
# CLAUDE.md §3.4): append the OtlpBatch frame + fsync before acking.
ourios-wal = { path = "../ourios-wal" }
# The Drain-derived template miner the pipeline hands per-tenant records
# to after they are durable (RFC 0003 §6.5 step 5).
ourios-miner = { path = "../ourios-miner" }
# The compaction runner drives ourios-parquet's planner + compactor
# (RFC 0009 §3.2: compaction is hosted in the ingester role) and uses
# its tenant-dir percent codec to enumerate the store.
ourios-parquet = { path = "../ourios-parquet" }
# Async runtime for the background compaction loop: `time` for the
# interval timer, `rt` for `spawn_blocking` (compaction is blocking
# filesystem/Parquet work), `macros` for `#[tokio::main]`/tests, `sync`
# for the audit sink's `Notify` eager-flush signal (issue #302).
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros", "sync"] }
# Telemetry: the lightweight OTel metrics API only (RFC 0001 §6.8 — the
# heavy SDK/OTLP live in ourios-telemetry; library crates resolve
# instruments through the global meter).
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
# Generated metric/attribute name constants (RFC 0009 §3.6); a leaf,
# zero-dep crate.
ourios-semconv = { path = "../ourios-semconv" }
# OTLP wire decode (RFC 0003 §6.2). Same crate + version + features the
# rest of the workspace pins (ourios-core, ourios-bench): the receiver
# decodes the gRPC / HTTP `application/x-protobuf` payload into the
# `ExportLogsServiceRequest` these generated types define. `with-serde`
# carries the OTLP/JSON mapping the `application/json` path uses
# (RFC0003.6). `gen-tonic` (not just `-messages`) supplies the
# `logs_service_server::LogsService` trait the gRPC listener implements
# (RFC0003.11/.15).
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "logs", "with-serde"] }
# `prost::Message::{decode, encode_to_vec}` for the protobuf payload.
# `std` is explicit (not relied on via workspace feature unification):
# `DecodeError::source` returns `prost::DecodeError` as `&dyn
# std::error::Error`, which only impls `Error` under prost's `std`.
prost = { version = "0.14", default-features = false, features = ["std"] }
# OTLP/JSON decode (RFC0003.6) via the proto types' `with-serde`
# `Deserialize` impls — the `application/json` transport body is an
# `ExportLogsServiceRequest` in the proto3-JSON mapping.
serde_json = { version = "1", default-features = false, features = ["std"] }
# HTTP transport (RFC 0003 §6.2): the OTLP/HTTP `/v1/logs` listener.
# `tokio` + `http1` so the router can be served; the handler + extractors
# (`State`, `Bytes`, `HeaderMap`) are core. On hyper 1.x, already in the
# tree.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
# The RFC 0029 §3.3 async auth gate on the gRPC listener is a tower
# Layer/Service (the sync tonic interceptor cannot await a JWKS refetch).
tower = { version = "0.5", default-features = false }
http = { version = "1", default-features = false, features = ["std"] }
# gzip decode for OTLP/HTTP `Content-Encoding: gzip` (an OTLP MUST,
# RFC0003.13). Pure-Rust backend — no zlib C dependency (CLAUDE.md).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# gRPC transport (RFC 0003 §6.2): the `LogsService` server. `codegen` for
# the generated `#[async_trait]` + `Request`/`Response`/`Status`; no
# socket transport is stood up in this slice (the service is exercised
# in-process).
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
# Parse the snapshot-recorded WAL high-water segment id back into the
# `uuid::Uuid` of `ourios_wal::WalOffset` (RFC 0001 §6.9 / RFC 0008
# §6.6). Same major as ourios-wal's, so the types unify.
uuid = { version = "1", default-features = false, features = ["std", "v7"] }

[features]
# RFC 0029: OIDC bearer resolution in front of the RFC 0026 enforcement.
oidc = ["ourios-core/oidc"]

[dev-dependencies]
# RFC 0030 test CAs / leaf certs, minted at test time — no committed
# key material (the RFC 0029 house rule).
rcgen = { version = "0.14", default-features = false, features = ["pem", "crypto", "ring"] }
# The RFC0026.2 served-stack arm: serve `LogsServiceServer::with_interceptor`
# over a local socket and drive it with a real tonic client, so the
# metadata → interceptor → extension → handler handoff is covered end to end.
tonic = { version = "=0.14.6", default-features = false, features = ["transport", "router", "channel"] }
tempfile = "=3.27.0"
# Read flushed files' Parquet schemas back in the RFC 0022 promoted-set
# threading test (pinned in lockstep with ourios-parquet's arrow stack,
# matching ourios-querier's dev pin).
parquet = { version = "=58.3.0", default-features = false, features = ["arrow"] }
# Drive the axum `Router` in-process (`ServiceExt::oneshot`) for the
# HTTP-transport acceptance tests — no real socket.
tower = { version = "=0.5.3", default-features = false, features = ["util"] }
# Proptest strategy over the OTLP proto value space for the
# wire-decode equivalence scenarios (RFC0003.5/.6 per §8).
proptest = "=1.11.0"
# Stand up an in-memory MeterProvider to assert the compaction metric
# stream; `testing` exposes `init_in_memory`.
ourios-telemetry = { path = "../ourios-telemetry", features = ["testing"] }
# The SDK data types (`ResourceMetrics` etc.) the metrics test reads.
opentelemetry_sdk = { version = "=0.32.1", default-features = false, features = ["metrics", "testing"] }
# The metrics test collects via the in-memory reader's periodic-export
# path, which needs a multi-thread runtime; `test-util` gives the RFC0008.8
# latency test a paused virtual clock for deterministic, jitter-free timing.
tokio = { version = "=1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "time", "macros", "test-util"] }

[lints]
workspace = true
