[package]
name = "ourios-parquet"
version = "0.0.0"
description = "Parquet schema, writer, reader, and audit-event file series for Ourios. RFC 0005 is the on-disk contract."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ourios-core = { path = "../ourios-core" }
# Arrow + Parquet — sized to the writer's needs. `arrow-array`
# carries the `RecordBatch` / array-builder surface
# `record_batch::mined_records_to_batch` uses; `arrow-schema`
# stays for the `Schema` / `Field` / `DataType` declarations
# (same cross-crate interop point the writer and reader hand to
# `parquet::arrow::ArrowWriter` / `ParquetRecordBatchReader`).
# `parquet` carries the actual writer (`arrow` feature pulls in
# `arrow::array::RecordBatch` integration).
arrow-array = { version = "55", default-features = false }
arrow-schema = { version = "55", default-features = false }
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }
# UUIDv7 file naming per RFC 0005 §3.4 — timestamp-in-high-bits
# means lexicographic sort = creation-order.
uuid = { version = "1", default-features = false, features = ["v7", "std"] }
# Calendar derivation for partition paths (year/month/day/hour
# in UTC). `chrono` is already in the Arrow dep tree for
# timestamp conversions; declaring it explicitly avoids
# relying on a transitive surface.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
# Used by tests that build `MinedRecord` fixtures.
tempfile = "3"

[lints]
workspace = true
