[package]
name = "ourios-parquet"
version = "0.0.0"
description = "Parquet schema, writer, reader, and audit-event file series for Ourios. RFC 0005 is the on-disk contract."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ourios-core = { path = "../ourios-core" }
# Arrow + Parquet — sized to the writer's needs. `arrow-array`
# carries the `RecordBatch` / array-builder surface
# `record_batch::mined_records_to_batch` uses; `arrow-schema`
# stays for the `Schema` / `Field` / `DataType` declarations
# (same cross-crate interop point the writer and reader hand to
# `parquet::arrow::ArrowWriter` / `ParquetRecordBatchReader`).
# `parquet` carries the actual writer (`arrow` feature pulls in
# `arrow::array::RecordBatch` integration).
arrow-array = { version = "55", default-features = false }
arrow-schema = { version = "55", default-features = false }
parquet = { version = "55", default-features = false, features = ["arrow", "zstd"] }
# Object-storage backend (RFC 0013) — one trait over LocalFileSystem (dev/
# test) and S3-compatible stores. Already in the workspace tree via
# DataFusion (the querier); declared here directly as the storage seam's
# home. `0.13` unifies with that transitive version. The `aws` feature (for
# the AmazonS3 backend) is added with the `green` S3 implementation.
object_store = { version = "0.13" }
# `bytes::Bytes` is the `parquet` reader's in-memory `ChunkReader` source for
# the RFC 0013 buffer-and-put read path (`Reader::open_bytes`). Already in the
# arrow/parquet tree; declared directly.
bytes = { version = "1", default-features = false }
# Drives the async `object_store` calls from the sync storage API
# (`Store::*_blocking` bridge — `Writer`/`Reader`/compaction are sync,
# `object_store` is async). Only `rt`: the bridge builds a `current_thread`
# runtime per call on its own thread. The S3 backend adds `enable_all()` and the
# `net`/`io`/`time` features in its slice. Already in the workspace tree via
# DataFusion / object_store.
tokio = { version = "1", default-features = false, features = ["rt"] }
# UUIDv7 file naming per RFC 0005 §3.4 — timestamp-in-high-bits
# means lexicographic sort = creation-order.
uuid = { version = "1", default-features = false, features = ["v7", "std"] }
# Calendar derivation for partition paths (year/month/day/hour
# in UTC). `chrono` is already in the Arrow dep tree for
# timestamp conversions; declaring it explicitly avoids
# relying on a transitive surface. Only the `std` feature is
# needed — `DateTime::<Utc>::from_timestamp_nanos` + the
# `Datelike` / `Timelike` traits live there. `clock` (which
# pulls in `iana-time-zone` and platform timezone lookup) is
# deliberately off; we never read the wall clock.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Audit-stream rejection variant's `would_be_template` /
# `would_be_positions` ride in the §3.7 `reason` column as a JSON
# object (the §3.7 text describes the column as "the degenerate-
# template guard's diagnostic string"; structuring the diagnostic
# as JSON preserves the in-memory `AuditEventKind::
# TemplateWideningRejectedDegenerate` shape across a round trip
# without amending the schema). serde_json carries the encoder
# and parser for that single column; the rest of the audit stream
# is plain Arrow columns.
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
# Used by tests that build `MinedRecord` fixtures.
tempfile = "3"
# Property tests for the compaction row-conservation invariant
# (RFC0009.2 / CLAUDE.md §6.2 — invariants get a property test).
proptest = "1"
# Async runtime for the RFC 0013 `Store` round-trip test (the I/O surface
# is async via `object_store`). Already in the workspace tree.
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[lints]
workspace = true
