[package]
name = "ourios-parquet"
version.workspace = true
description = "Parquet schema, writer, reader, and audit-event file series for Ourios. RFC 0005 is the on-disk contract."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ourios-core = { path = "../ourios-core" }
# Arrow + Parquet ŌĆö sized to the writer's needs. `arrow-array`
# carries the `RecordBatch` / array-builder surface
# `record_batch::mined_records_to_batch` uses; `arrow-schema`
# stays for the `Schema` / `Field` / `DataType` declarations
# (same cross-crate interop point the writer and reader hand to
# `parquet::arrow::ArrowWriter` / `ParquetRecordBatchReader`).
# `parquet` carries the actual writer (`arrow` feature pulls in
# `arrow::array::RecordBatch` integration).
arrow-array = { version = "58", default-features = false }
arrow-schema = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
# Object-storage backend (RFC 0013) ŌĆö one trait over LocalFileSystem (dev/
# test) and S3-compatible stores. Already in the workspace tree via
# DataFusion (the querier); declared here directly as the storage seam's
# home. `0.13` unifies with that transitive version. `aws` pulls in the
# `AmazonS3` backend (RFC0013.1/.7) ŌĆö it defaults conditional PUT to
# `S3ConditionalPut::ETagMatch`, the `If-Match` CAS the manifest swap needs
# (RFC0013.3/.4).
object_store = { version = "0.13", features = ["aws"] }
# `bytes::Bytes` is the `parquet` reader's in-memory `ChunkReader` source for
# the RFC 0013 buffer-and-put read path (`Reader::open_bytes`). Already in the
# arrow/parquet tree; declared directly.
bytes = { version = "1", default-features = false }
# `TryStreamExt::try_collect` to drain the `object_store` `list` stream in
# `Store::list_blocking` (RFC 0019 ŌĆö the querier/compactor enumerate partitions
# + files through the seam). Already in the tree via object_store/tokio.
futures = { version = "0.3", default-features = false, features = ["std"] }
# Drives the async `object_store` calls from the sync storage API
# (`Store::*_blocking` bridge ŌĆö `Writer`/`Reader`/compaction/manifest are sync,
# `object_store` is async). `rt-multi-thread` because the bridge shares one
# process-wide runtime driven by `block_on` from many threads concurrently
# (parallel queries resolving manifests). `net` (+ its IO driver) and `time` so
# the bridge runtime's `enable_all()` can drive the `AmazonS3` backend's HTTP
# client (reqwest/hyper). Already in the workspace tree via DataFusion /
# object_store.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "net", "time"] }
# UUIDv7 file naming per RFC 0005 ┬¦3.4 ŌĆö timestamp-in-high-bits
# means lexicographic sort = creation-order.
uuid = { version = "1", default-features = false, features = ["v7", "std"] }
# Calendar derivation for partition paths (year/month/day/hour
# in UTC). `chrono` is already in the Arrow dep tree for
# timestamp conversions; declaring it explicitly avoids
# relying on a transitive surface. Only the `std` feature is
# needed ŌĆö `DateTime::<Utc>::from_timestamp_nanos` + the
# `Datelike` / `Timelike` traits live there. `clock` (which
# pulls in `iana-time-zone` and platform timezone lookup) is
# deliberately off; we never read the wall clock.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Audit-stream rejection variant's `would_be_template` /
# `would_be_positions` ride in the ┬¦3.7 `reason` column as a JSON
# object (the ┬¦3.7 text describes the column as "the degenerate-
# template guard's diagnostic string"; structuring the diagnostic
# as JSON preserves the in-memory `AuditEventKind::
# TemplateWideningRejectedDegenerate` shape across a round trip
# without amending the schema). serde_json carries the encoder
# and parser for that single column; the rest of the audit stream
# is plain Arrow columns.
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
# Miner tunables (RFC 0004), their own crate so config edits recompile narrowly (RFC 0028).
ourios-config = { path = "../ourios-config" }
# RFC 0024 ┬¦5 P1 round-trip (`tests/rfc0024_properties.rs`): generated
# OTLP batches come from the dev-only generator crate and enter
# through the real miner so the writer sees production-shaped rows.
ourios-testgen = { path = "../ourios-testgen" }
ourios-miner = { path = "../ourios-miner" }
# RFC0021.4 view-representation test: cast a plain batch's string/binary
# columns to Utf8View/BinaryView and prove the shared decoder reads both.
arrow-cast = { version = "=58.3.0", default-features = false }
# Used by tests that build `MinedRecord` fixtures.
tempfile = "=3.27.0"
# Property tests for the compaction row-conservation invariant
# (RFC0009.2 / CLAUDE.md ┬¦6.2 ŌĆö invariants get a property test).
proptest = "=1.11.0"
# Async runtime for the RFC 0013 `Store` round-trip tests (the I/O surface is
# async via `object_store`). `rt-multi-thread` so the S3 integration tests'
# `#[tokio::test(flavor = "multi_thread")]` is self-contained rather than
# relying on the main dependency's feature set. Already in the workspace tree.
tokio = { version = "=1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
# RFC 0013 S3 integration tests: spin LocalStack (S3-compatible, Apache-2.0)
# via testcontainers and point `Store::s3` at it through the endpoint override.
# The S3 tests are `#[ignore]`d (run only by the `s3-integration` CI job via
# `--ignored` + a name filter, where a Docker-API runtime is available); the
# default `cargo test` compiles but skips them.
testcontainers-modules = { version = "=0.15.0", features = ["localstack"] }

[lints]
workspace = true
