[package]
name = "ourios-querier"
version = "0.0.0"
description = "RFC 0007 querier — DataFusion execution frontend that runs the logs DSL against the RFC 0005 Parquet store."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ourios_querier"
path = "src/lib.rs"

[dependencies]
# `TenantId` for the per-request tenant scope (CLAUDE.md §3.7).
ourios-core = { path = "../ourios-core" }
# The RFC 0005 store this queries — used here for the canonical
# `percent_encode_tenant` so the tenant partition-dir path matches
# the writer's byte-for-byte (single source of truth, no drift).
ourios-parquet = { path = "../ourios-parquet" }
# Pillar #3 — the execution engine. A plain dep, but its types are
# kept strictly internal: no `datafusion`/`arrow` type appears in
# any public signature or error (hazard §4.6). Pulls arrow/parquet
# 58 vs ourios-parquet's 55; harmless because the two never cross
# in memory (DataFusion reads Parquet files from disk).
datafusion = { version = "53", default-features = false, features = ["parquet"] }

[dev-dependencies]
# Async runtime for the execution integration tests; the writer
# (ourios-parquet, a normal dep) lays down fixture Parquet, and
# tempfile gives each test a scratch bucket.
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"

[lints]
workspace = true
