[package]
name = "ourios-querier"
version = "0.0.0"
description = "RFC 0007 querier — DataFusion execution frontend that runs the logs DSL against the RFC 0005 Parquet store."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "ourios_querier"
path = "src/lib.rs"

[dependencies]
# `TenantId` for the per-request tenant scope (CLAUDE.md §3.7).
ourios-core = { path = "../ourios-core" }
# RFC 0017 §3.2/§3.3 — the read-time template registry stores
# `tree::OwnedToken`s (parsed from the audit stream's canonical template
# strings) and the query-row path renders lines via `reconstruct::render`.
# The read path reuses the miner's token model + reconstruction logic
# rather than re-deriving them. No arrow/DataFusion type crosses this.
ourios-miner = { path = "../ourios-miner" }
# The RFC 0005 store this queries — used here for the canonical
# `percent_encode_tenant` so the tenant partition-dir path matches
# the writer's byte-for-byte (single source of truth, no drift), and
# (RFC 0019) the `Store` seam the audit + bulk scans read through.
ourios-parquet = { path = "../ourios-parquet" }
# RFC 0019 — the audit read path feeds `Store::get_blocking` bytes into
# `AuditReader::open_bytes(bytes::Bytes)`; already in the tree via
# ourios-parquet's object_store.
bytes = { version = "1", default-features = false }
# RFC 0019 — object-store table URLs (`ourios://store/<key>`) must
# percent-encode each key segment so `ListingTableUrl::parse`'s URL-decode
# round-trips back to the exact store key (keys carry literal `%` from the
# percent-encoded `tenant_id=`). Already in the tree via url/object_store.
percent-encoding = { version = "2", default-features = false, features = ["alloc"] }
# Pillar #3 — the execution engine. A plain dep, but its types are
# kept strictly internal: no `datafusion`/`arrow` type appears in
# any public signature or error (hazard §4.6). Pulls arrow/parquet
# 58 vs ourios-parquet's 55; harmless because the two never cross
# in memory (DataFusion reads Parquet files from disk).
# `string_expressions` / `regex_expressions` register the scalar
# functions the DSL compiler emits for the string calls (`contains` /
# `starts_with` / `ends_with`) and the `=~` / `!~` regex operators
# (RFC 0002 §6.1); with default features off they would not be in the
# session registry and planning those predicates would fail.
datafusion = { version = "53", default-features = false, features = [
    "parquet",
    "string_expressions",
    "regex_expressions",
] }
# RFC 0002 structured (JSON) query surface (§6.4) — deserialised into the
# shared DSL IR. serde derive for the surface types, serde_json for the
# parse. No DataFusion/arrow/SQL type crosses this surface (hazard §4.6).
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# RFC 0002 §6.5 — the compiler resolves `range(...)` RFC 3339 timestamp
# bounds to `time_unix_nano`. `chrono` is already in the Arrow/DataFusion
# dep tree (and ourios-parquet uses it for the same nanosecond timeline),
# so this adds no new transitive cost.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# RFC 0019 — `run_drift` offloads the blocking audit listing (`Store::list_blocking`
# / the `std::fs` walk) via `spawn_blocking` so it doesn't tie up a runtime worker
# on the async query path. `rt` is the blocking-pool half only; the runtime itself
# is the caller's (the server / `#[tokio::test]`).
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
# RFC0002.7 — the parse/serialise round-trip is a property test over
# generated well-formed queries.
proptest = "1"
# Async runtime for the execution integration tests; the writer
# (ourios-parquet, a normal dep) lays down fixture Parquet, and
# tempfile gives each test a scratch bucket.
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
# RFC0007.4 (forward-compatible reads) needs Parquet files whose
# schema differs from the current one — an extra column (future
# writer) or a missing OPTIONAL column (old writer). The
# ourios-parquet `Writer` only emits the current schema, so the
# heterogeneous fixtures are written via the raw `ArrowWriter`
# over a batch built from the public `data_schema()`. Pinned to
# the same arrow/parquet 55 ourios-parquet writes with; the files
# are then read by DataFusion's parquet 58 — the same disk-only
# cross-version handoff the crate already relies on.
parquet = { version = "55", default-features = false, features = ["arrow"] }
arrow-array = { version = "55", default-features = false }
arrow-schema = { version = "55", default-features = false }
# RFC0002.10 — proves the canonical β serialisation survives a YAML
# scalar round-trip (the Perses-embedding guarantee). Test-only.
serde_yaml = { version = "0.9.34", default-features = false }
# RFC0002.11 — validates the structured surface against its published JSON
# Schema in the acceptance test. `default-features = false` drops the
# reqwest/TLS remote-`$ref` resolver: the schema is self-contained
# (local `$ref`s only), so no network resolver is needed.
jsonschema = { version = "0.46.5", default-features = false }

[lints]
workspace = true
