[package]
name = "ourios-server"
version.workspace = true
description = "Ourios server binary (CLAUDE.md ┬º1, ┬º7). Currently runs the background compaction role (RFC 0009 ┬º3.2) with OTLP metrics + durable audit."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# `publish = false` (all crates are pre-release 0.0.0) otherwise hides the
# binary from cargo-dist; `dist = true` opts this one package back in as the
# sole distributable artifact for `v*` tag releases.
[package.metadata.dist]
dist = true

[[bin]]
name = "ourios-server"
path = "src/main.rs"

[dependencies]
# The background compaction daemon (RFC 0009 ┬º3.2) + the OTLP receiver
# building blocks (RFC 0003 ┬º6.2): the ingest pipeline, the axum HTTP
# router, and the tonic `LogsService` impl the receiver role serves.
ourios-ingester = { path = "../ourios-ingester" }
# Durable compaction-audit sink (RFC 0005 ┬º3.7) + the compaction policy.
ourios-parquet = { path = "../ourios-parquet" }
# OTel SDK + OTLP push MeterProvider bootstrap (RFC 0001 ┬º6.8).
ourios-telemetry = { path = "../ourios-telemetry" }
# OTel meter API for the querier role's metrics (RFC 0016 ┬º3.6); the SDK
# lives in ourios-telemetry, library code resolves against the global meter.
opentelemetry = { version = "0.32", default-features = false, features = ["metrics"] }
# Generated semantic-convention name constants for the query metrics.
ourios-semconv = { path = "../ourios-semconv" }
# The receiver role's durable WAL + miner + miner config (one pipeline
# over a single `Wal`, RFC 0003 ┬º6.5 / RFC 0008 ┬º3.1).
ourios-wal = { path = "../ourios-wal" }
ourios-miner = { path = "../ourios-miner" }
ourios-core = { path = "../ourios-core" }
# The query engine (RFC 0007) the querier role (RFC 0016) serves: the DSL
# front-ends (`dsl::parse_statement` / `parse_structured_statement`) + the
# `Querier` (`run_query` / `run_drift`). Its types are kept internal ÔÇö no
# DataFusion/SQL crosses the HTTP boundary (H6 / RFC0016.5-error-model).
ourios-querier = { path = "../ourios-querier" }
# JSON request/response codec for the querier endpoint (RFC 0016 ┬º3.3/┬º3.4):
# parse the `{"query": ÔÇª}` wrapper and serialise the Ourios-owned response
# DTOs. The structured-IR JSON body itself is parsed by the querier's own
# `parse_structured_statement`.
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
# `LogsServiceServer` to host the receiver's `LogsService` impl over gRPC.
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic", "logs"] }
# gRPC transport (server) for the OTLP/gRPC listener (RFC0003.16).
tonic = { version = "0.14", default-features = false, features = ["transport", "router"] }
# HTTP transport (serve) for the OTLP/HTTP listener (RFC0003.16); reuses
# the receiver crate's `router`.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
# Async runtime: `rt-multi-thread` for the compactor's `spawn_blocking`
# sweeps + the receiver listeners, `signal` for SIGINT/SIGTERM graceful
# shutdown, `net`/`sync` for the listeners + shutdown fan-out, `macros`
# for `#[tokio::main]`.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }

[dev-dependencies]
# RFC 0020 env-substitution resolver property tests (config::env_subst): the
# OTel Config WG vector table + invariants (escape round-trip, non-recursion).
proptest = "=1.11.0"
# RFC0003.16 served-binary integration test: temp dirs, a real tonic
# gRPC client (`channel`) + a hand-rolled HTTP/1.1 POST (tokio io/time),
# prost to encode the request, the WAL to replay + assert durability.
tempfile = "=3.27.0"
prost = { version = "=0.14.4", default-features = false, features = ["std"] }
tonic = { version = "=0.14.6", default-features = false, features = ["channel"] }
tokio = { version = "=1.52.3", default-features = false, features = ["io-util", "time", "process"] }
# Drive the querier `Router` in-process (`ServiceExt::oneshot`) for the
# RFC 0016 handler tests ÔÇö no socket, no HTTP client (the ingester's pattern).
tower = { version = "=0.5.3", default-features = false, features = ["util"] }
# In-memory metric exporter for the RFC0016.6 query-metrics test: install a
# global meter provider and read the exported stream (the ingester pattern).
ourios-telemetry = { path = "../ourios-telemetry", features = ["testing"] }
opentelemetry_sdk = { version = "=0.32.1", default-features = false, features = ["metrics", "testing"] }
# RFC 0019 server-level S3 integration tests (rfc0019_storage_backend): spin
# LocalStack (S3-compatible, Apache-2.0) via testcontainers, spawn the server
# pointed at it through the endpoint override, and assert bucket contents via a
# `Store::s3`. `#[ignore]`d ÔÇö run only by the `s3-integration` CI job (Docker +
# AWS_* env); the default `cargo test` compiles but skips them.
testcontainers-modules = { version = "=0.15.0", features = ["localstack"] }

[lints]
workspace = true
